[workspace]
members = ["src/client", "src/tunnel"]

[workspace.package]
description = "A simple TLS tunneling implementation, written in Rust."
version = "0.2.0"
license = "MIT"
license-file = "LICENCE.md"
readme = "README.md"
homepage = "https://github.com/fredclausen/sltunnel"
repository = "https://github.com/fredclausen/sltunnel"
documentation = "https://github.com/fredclausen/sltunnel/#readme"
keywords = ["rust-library", "tls-tunnel", "firewall-bypass"]
authors = [
    "Naoki Ikeguchi <root@siketyan.dev>",
    "Fred Clausen <43556888+fredclausen@users.noreply.github.com>",
]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
log = "0.4.27"
rustls-platform-verifier = "0.5.1"
sdre-rust-logging = "0.3.15"
tokio = { version = "1.44.1", features = [
    "io-util",
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
] }
tokio-rustls = "0.26.2"
